style.css
@font-face {
   font-family: "Datatype";
   src: url("./files/Datatype-VariableFont_wdth\,wght.ttf") format('truetype');
   
}

:root {
   --lightmode-background: #f2f2ef;
   --lightmode-text: #161616;
   --greyed-text: #5f5f5f;
}

html, body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  width: 100%;
  height: 100%;

  background-color: var(--lightmode-background);
}
h1 {
   font-family: "Datatype";
   font-size: 12px;
   margin: 0;
   padding:0;
}
h2, p {
   font-family: "Datatype";
   font-size: 18px;
   margin: 0;
   padding:0;
}
h2 {
   text-transform: uppercase;
   font-weight: 900;
   font-variation-settings: "wght" 900;
}
#page-title{
   padding: 0px 0px 2px 10px;
   text-transform: uppercase;
}
#all-content {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0px 10px;
   box-sizing: border-box;
   width: 100%;
   height: 100vh;
   gap: 12px;
   overflow-y: hidden;
}
@media screen and (max-width: 768px) {
  #all-content {
    /* flex-direction: column; */
    overflow-y: auto;
    height: auto;
    padding: 24px;
  }
}
#translation-panel{
   margin-top: 6px;
   overflow-y: auto;
   height: 100%;
}
@media screen and (max-width: 768px) {
  #translation-panel {
    flex: 1;
    width: 100%;
  }
}
#translation-body{
   /* position: absolute; */
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden;
   /* justify-content: space-between; */
   min-width: 300px;
   height: 100%; 
   padding-bottom: 24px;
   gap: 24px;
   width: 25vw;
   /* flex: 0 0 auto;  */
}
@media screen and (max-width: 768px) {
  #translation-body {
    width: 100%;
  }
}
#panel-compress-cont {
   display: flex;
   justify-content: flex-end;
}
#compress-carat {
   border: 0;
   background: none;
}
@media screen and (max-width: 768px) {
  #compress-carat {
    display: none; 
  }
}

#source-wrap {
   display: grid;
}
textarea {
   min-height: 150px;
   padding: 0;
   margin: 0;
   resize: vertical;
   background-color: transparent;
}
#source {
   padding: 10px 12px; 
   font-family: "Datatype";
   /* border-radius: 4px; */
}
.drop-zone.drag-over {
  outline: 2px dashed var(--lightmode-text);
  outline-offset: 2px;
}
button {
   background-color: transparent;
   border: 1px solid var(--lightmode-text);
   /* border-radius: 4px; */
   color: var(--lightmode-text);
   transition: background-color 0.2s ease;
   font-family: "Datatype";
   
}
button:hover {
   background-color: var(--lightmode-text);
   color: var(--lightmode-background);
   transition: background-color 0.2s ease;
}
.mode-btn {
   padding: 4px 8px;
}
.mode-btn[aria-pressed="true"], .toggle-button[aria-pressed="true"] {
   background-color: var(--lightmode-text);
   color: var(--lightmode-background);
}
#mode-buttons{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 4px;
}
#submit-button {
   height: 36px;
}
#mode-switch-cont {
   display: flex;
   gap: 12px;
}
.toggle-button {
   padding: 4px 8px;
   width: 100%;
}
.toggle-type-controls {
   display: flex;
   flex-direction: column;
   gap: 12px;
}
.toggle-type-controls[aria-visible="false"] {
   display: none;
}
.generate-btn-cont {
   display: flex;
   justify-content: flex-end;
   gap: 8px;
}
#drop-cont {
   min-height: 100px;
   border: 1px solid var(--lightmode-text);
   display: flex;
   padding: 12px;
   gap: 12px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
}
#drop-area {
   display: flex;
   gap: 12px;
   justify-content: center;
   align-items: center;
}
#file-input {
   display: none;
}
.image-drop-cont{
   display: flex;
   flex-direction: column;
   gap: 6px;
}
#image-drop-area.drag-over {
   color: var(--greyed-text);
}
#image-icon {
   color: var(--lightmode-text)
}
#image-drop-area.drag-over #image-icon {
   color: var(--greyed-text);
}
#preview-img {
   width: 80%;
   height: auto;
}


#canvas-area {
   display: flex;
   flex-direction: column;
   min-width: 400px;
   height: 100%;
   min-height: 400px;
   flex: 1;
   /* margin-left: 10vw; */
   overflow-y: hidden;
   /* padding-top: 24px; */
}
#canvas-container {
   flex: 1;
   min-width: 250px;
   padding: 12px;
   max-height: 100vh;
   height: 100%;  

   overflow-y: auto;
   background-color: transparent;
   border-top: 2px solid var(--lightmode-text);
   border-left: 1px solid var(--lightmode-text);
}
canvas {
  display: block;
  width: 100%;
  height: auto;
  overflow: visible;
  background-color: transparent;
}
#download-canvas-btn-cont {
   display: flex;
   justify-content: flex-end;
   padding: 6px 6px 0 0;
}
.download-canvas-btn {
  position: absolute;
  right: 0px; 
  max-width: 250px;
}

